Table users {
  id UUID [pk]
  username varchar [unique, not null]
  email varchar [unique, not null]
  password_hash varchar [not null]
  verified boolean [default: false]
  remember_me boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]
}

Table games {
  id UUID [pk]
  name varchar [not null]
  creator_id UUID [ref: > users.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]
}

Table rounds {
  id UUID [pk]
  game_id UUID [ref: > games.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]
}

Table moves {
  id UUID [pk]
  round_id UUID [ref: > rounds.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]
}

Table points {
  id UUID [pk]
  move_id UUID [ref: > moves.id, not null]
  value int [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]
}

Table times {
  id UUID [pk]
  move_id UUID [ref: > moves.id, not null]
  value timestamp [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]
}

Table password_reset_requests {
  id UUID [pk]
  user_id UUID [ref: > users.id, not null]
  token varchar [unique, not null]
  expires_at timestamp [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]
}

Table move_scores {
  id UUID [pk]
  move_id UUID [ref: > moves.id, not null]
  value int [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]
}

Table hidden_users {
  id UUID [pk]
  user_id UUID [ref: > users.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}
